[gd_scene load_steps=4 format=2]

[ext_resource path="res://Maps/Map_Rooms_122x89.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1280.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIPanel" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/UIPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 713.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/UIPanel/VBoxContainer"]
margin_right = 286.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
color = Color( 0.054902, 0.054902, 0.054902, 1 )

[node name="TextDisplay" type="RichTextLabel" parent="UI/UIPanel/VBoxContainer/ColorRect"]
margin_left = 4.0
margin_right = 286.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="VBoxContainer" parent="UI/UIPanel/VBoxContainer"]
margin_top = 404.0
margin_right = 286.0
margin_bottom = 706.0
size_flags_vertical = 3

[node name="ClearNav" type="Button" parent="UI/UIPanel/VBoxContainer/PanelContainer"]
margin_right = 286.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Clear Navigation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rebuild" type="Button" parent="UI/UIPanel/VBoxContainer/PanelContainer"]
margin_top = 24.0
margin_right = 286.0
margin_bottom = 44.0
focus_mode = 0
enabled_focus_mode = 0
text = "Rebuild Graph"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphTypeContainer" type="HBoxContainer" parent="UI/UIPanel/VBoxContainer/PanelContainer"]
margin_top = 48.0
margin_right = 286.0
margin_bottom = 68.0

[node name="CenterContainer" type="CenterContainer" parent="UI/UIPanel/VBoxContainer/PanelContainer/GraphTypeContainer"]
margin_right = 141.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="UI/UIPanel/VBoxContainer/PanelContainer/GraphTypeContainer/CenterContainer"]
margin_left = 8.0
margin_top = 2.0
margin_right = 133.0
margin_bottom = 17.0
rect_min_size = Vector2( 125, 15 )
size_flags_horizontal = 3
text = "Select Graph Type :"
scroll_active = false

[node name="GraphTypeSelection" type="OptionButton" parent="UI/UIPanel/VBoxContainer/PanelContainer/GraphTypeContainer"]
margin_left = 145.0
margin_right = 286.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunNavContainer" type="HBoxContainer" parent="UI/UIPanel/VBoxContainer/PanelContainer"]
margin_top = 72.0
margin_right = 286.0
margin_bottom = 96.0

[node name="RunNavBatch" type="Button" parent="UI/UIPanel/VBoxContainer/PanelContainer/RunNavContainer"]
margin_right = 208.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "Run Navigation"

[node name="NavBatchSizeInput" type="SpinBox" parent="UI/UIPanel/VBoxContainer/PanelContainer/RunNavContainer"]
margin_left = 212.0
margin_right = 286.0
margin_bottom = 24.0
min_value = 1.0
max_value = 10000.0
value = 100.0
allow_greater = true

[node name="MapSelectionContainer2" type="HBoxContainer" parent="UI/UIPanel/VBoxContainer/PanelContainer"]
margin_top = 100.0
margin_right = 286.0
margin_bottom = 120.0

[node name="CenterContainer" type="CenterContainer" parent="UI/UIPanel/VBoxContainer/PanelContainer/MapSelectionContainer2"]
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 20 )

[node name="RichTextLabel" type="RichTextLabel" parent="UI/UIPanel/VBoxContainer/PanelContainer/MapSelectionContainer2/CenterContainer"]
margin_left = 5.0
margin_top = 2.0
margin_right = 85.0
margin_bottom = 17.0
rect_min_size = Vector2( 80, 15 )
size_flags_horizontal = 3
text = "Select Map :"
scroll_active = false

[node name="MapSelection" type="OptionButton" parent="UI/UIPanel/VBoxContainer/PanelContainer/MapSelectionContainer2"]
margin_left = 94.0
margin_right = 286.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="graph_type_selection" from="UI" to="." method="_on_UI_graph_type_selection"]
[connection signal="map_selection" from="UI" to="." method="_on_UI_map_selection"]
[connection signal="trigger_clear_navigation" from="UI" to="." method="_on_UI_trigger_clear_navigation"]
[connection signal="trigger_navigation_batch" from="UI" to="." method="_on_UI_trigger_navigation_batch"]
[connection signal="trigger_rebuild" from="UI" to="." method="_on_UI_trigger_rebuild"]
[connection signal="pressed" from="UI/UIPanel/VBoxContainer/PanelContainer/ClearNav" to="UI" method="_on_ClearNav_pressed"]
[connection signal="pressed" from="UI/UIPanel/VBoxContainer/PanelContainer/Rebuild" to="UI" method="_on_Rebuild_pressed"]
[connection signal="item_selected" from="UI/UIPanel/VBoxContainer/PanelContainer/GraphTypeContainer/GraphTypeSelection" to="UI" method="_on_GraphTypeSelection_item_selected"]
[connection signal="pressed" from="UI/UIPanel/VBoxContainer/PanelContainer/RunNavContainer/RunNavBatch" to="UI" method="_on_RunNavBatch_pressed"]
[connection signal="item_selected" from="UI/UIPanel/VBoxContainer/PanelContainer/MapSelectionContainer2/MapSelection" to="UI" method="_on_MapSelection_item_selected"]
